namespaces/redis-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redis
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    tenant: mirai
    environment: production
