namespaces/tops-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tops
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    tenant: tops
    environment: production
